Improved/agapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agapp
spec:
  selector:
    app: agapp
  ports:
    - name: http
      port: 80
